--- a/index.html
+++ b/index.html
@@ -141,15 +141,28 @@
                 <div class="row">
                     <div class="column upright">
                         <p>Move</p>
-                        <button id="mr"><i class="fas fa-arrow-right"></i></button>
-                        <button id="ml"><i class="fas fa-arrow-left"></i></button>
-                        <button id="mu"><i class="fas fa-arrow-up"></i></button>
-                        <button id="md"><i class="fas fa-arrow-down"></i></button>
+                        <div class="row">
+                            <button id="mu"><i class="fas fa-arrow-up"></i></button>
+
+                        </div>
+                        <div class="row">
+                            <div class="column">
+                                <button id="ml"><i class="fas fa-arrow-left"></i></button>
+
+                            </div>
+                            <div class="column">
+                                <button id="mr"><i class="fas fa-arrow-right"></i></button>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <button id="md"><i class="fas fa-arrow-down"></i></button>
+
+                        </div>
                     </div>
                     <div class="column">
                         <button id="reset">Reset <i class="fas fa-power-off"></i></button>
                         <div class="wrap">
-                            <input id="size" type="number" size="4" maxlength="1" max="7" min="3" value="5"></input>
+                            <input id="size" type="number" size="4" maxlength="1" max="8" min="3" value="5"></input>
 
                             <button id="start"><i class="fas fa-play"></i></button>
                         </div>
